--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         </activity>
         <activity
             android:name=".BookPagerActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".BookListActivity">
 
         </activity>
     </application>
